--- a/templates/home_copy.html
+++ b/templates/home_copy.html
@@ -3687,7 +3687,7 @@ function handleSignOut() {
     showLogoutConfirmation();
 }
 
-unction showLogoutConfirmation() {
+function showLogoutConfirmation() {
     const overlay = document.getElementById('logoutOverlay');
     overlay.classList.add('show');
     
