--- a/templates/home_copy.html
+++ b/templates/home_copy.html
@@ -2865,7 +2865,7 @@ function handleAuthAction() {
         showLoginModal();
     } else {
         // User is not signed in, handle sign in
-        signInfree();
+        showLoginModal();
     }
 }
 
